# fareview

./: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  CNAME  Dockerfile  Makefile  Pipfile  Procfile  README.md  alembic.ini  app.py  index.html  pyproject.toml  renovate.json  scrapy.cfg  task.sh
.github/workflows/: cd.yml  ci.yml  generate_csv.yml  release.yml  test.yml
alembic/: README.md  env.py
alembic/examples/: get_all_by_brand.sql  get_all_latest.sql  get_number_of_prices.sql
alembic/versions/: b021b2d6d24c_init.py
data/: asahi.csv  carlsberg.csv  guinness.csv  heineken.csv  tiger.csv
fareview/: extensions.py  items.py  middlewares.py  models.py  pipelines.py  settings.py  utils.py
fareview/commands/: prune.py
fareview/spiders/: lazada.py  qoo10.py  redmart.py  shopee.py
fareview/utils/: bot.py  misc.py  parsers.py
scripts/: generate_csv.sh  prune.sh
