[tool.poetry]
name = "fareview"
version = "1.0.0"
description = "A simple, fast market price scanner."
authors = ["Jerry Ng <ngshiheng@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "==2.6.1"
scrapy-fake-useragent = "1.4.4"
ipython = "==8.1.1"
sentry-sdk = "==1.5.7"
psycopg2-binary = "==2.9.3"
SQLAlchemy = "==1.4.32"
price-parser = "0.3.4"
colorlog = "==6.6.0"
python-telegram-bot = "^13.7"
SQLAlchemy-Utils = "==0.38.2"
alembic = "==1.7.6"

[tool.poetry.dev-dependencies]
autopep8 = "==1.6.0"
flake8 = "4.0.1"
pre-commit = "==2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
