[tool.poetry]
authors = ["Jerry Ng <ngshiheng@gmail.com>"]
description = "A simple, fast market price scanner."
name = "fareview"
version = "1.1.14"

[tool.poetry.dependencies]
SQLAlchemy = "==1.4.37"
SQLAlchemy-Utils = "==0.38.2"
Scrapy = "2.5.1"
alembic = "==1.8.0"
colorlog = "==6.6.0"
ipython = "==8.4.0"
price-parser = "0.3.4"
psycopg2-binary = "==2.9.3"
python = "^3.9"
python-telegram-bot = "^13.7"
scrapy-fake-useragent = "1.4.4"
sentry-sdk = "==1.6.0"

[tool.poetry.dev-dependencies]
autopep8 = "==1.6.0"
flake8 = "4.0.1"
pre-commit = "==2.19.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.semantic_release]
branch = "main"
build_command = "pip install poetry && poetry build"
upload_to_pypi = false
upload_to_release = true
version_variable = [
  "fareview/__init__.py:__version__",
  "pyproject.toml:version",
]
