[tool.poetry]
authors = ["Jerry Ng <ngshiheng@gmail.com>"]
description = "A simple, fast market price scanner."
name = "fareview"
version = "1.2.1"

[tool.poetry.dependencies]
SQLAlchemy = "==1.4.44"
SQLAlchemy-Utils = "==0.38.3"
Scrapy = "==2.7.1"
alembic = "==1.8.1"
colorlog = "==6.7.0"
ipython = "==8.7.0"
price-parser = "0.3.4"
psycopg2-binary = "==2.9.5"
python = "^3.9"
scrapy-fake-useragent = "1.4.4"
sentry-sdk = "==1.11.1"
setuptools = "65.6.3"

[tool.poetry.dev-dependencies]
autopep8 = "==2.0.1"
flake8 = "==6.0.0"
pre-commit = "==2.20.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.semantic_release]
branch = "main"
build_command = "pip install poetry && poetry build"
upload_to_pypi = false
upload_to_release = true
version_variable = [
  "fareview/__init__.py:__version__",
  "pyproject.toml:version",
]
